--- a/index.html
+++ b/index.html
@@ -237,45 +237,134 @@
                     наяву..</p>
             </li>
         </ul>
+        <ul class="multserials">
+            <li>
+                <h1 class="multserials-title">Мультсеріали</h1>
+            </li>
+            <li class="multserials-item">
+                <a class="multserials-img" href="https://uaserials.pro/1030-rozcharuvannya.html"><img
+                        src="https://uaserials.pro/posters/1030.jpg" alt="Розчарування"></a>
+                <h2 class="multserials-name">Розчарування</h2>
+                <p class="multserials-text">Мультсеріал для дорослої аудиторії, від творця «Сімпсонів» та «Футурами»
+                    Метта Грейнінга.
+
+                    Дії серіалу розгорнуться в середньовічному королівстві Дрімландія і розкажуть про
+                    принцесу-алкоголічку Бін, її нервового
+                    ельфа Елфо і «особистого демона» Люці. На своєму життєвому шляху це тріо зустріне огрів, фей,
+                    гарпій, бісів, тролів і
+                    безліч не самих розумних людей.</p>
+            </li>
+            <li class="multserials-item">
+                <a class="multserials-img" href=""><img src="https://uaserials.pro/posters/408.jpg"
+                        alt="Таємниці Гравіті Фолз"></a>
+                <h2 class="multserials-name">Таємниці Гравіті Фолз</h2>
+                <p class="multserials-text">На літні канікули, підлітки-близнюки Діппер і Мейбл, відправляються в гості
+                    до далекого родича — дядечка Стена, в
+                    провінційну глибинку Гравіті Фолз. Стен — досить дивний персонаж. Він вкрай хитрий і меркантильний,
+                    завжди намагається
+                    отримати якомога більше грошей. Непогані бариші дядечкові приносить Хижка Чудес — туристичний центр.
+                    Підлітки відверто
+                    нудяться в Гравіті Фолз, поки не виявляють, що в містечку відбуваються надприродні події. Все
+                    починається з того, що
+                    Дріппер знаходить дивний щоденник, в якому описуються дивовижні таємниці Гравіті Фолз. Близнюки
+                    вирішують об'єднати
+                    сили, щоб розгадати всі загадки містечка.</p>
+            </li>
+            <li class="multserials-item">
+                <a class="multserials-img" href="https://uaserials.pro/1367-soviniy-dim.html"><img
+                        src="https://uaserials.pro/posters/1367.jpg" alt=""></a>
+                <h2 class="multserials-name">Совиний дім</h2>
+                <p class="multserials-text">Луз – юна, життєрадісна і допитлива дівчинка, якій абсолютно не сидиться на
+                    місці. Одного разу вона виявила старовинне
+                    дзеркало, яке було не просто предметом інтер'єру, а порталом в магічне царство демонів. І вона без
+                    найменшого страху
+                    приступила до дослідження нової реальності. Тут дівчинка познайомилася з відьмою-бунтаркою на ім'я
+                    Еда і крихітним, але
+                    войовничим дракончиком на прізвисько Кінг, які стали для неї новими і вірними друзями, а в
+                    подальшому і зовсім стали для
+                    неї сім'єю. І дивлячись на них, Луз вирішила непросто затриматися в даному світі, а стати справжньою
+                    відьмою, навіть
+                    незважаючи на повну відсутність магічних здібностей у себе.
+                    Ось тільки царство демонів – дуже небезпечний світ і набагато страшніший, ніж може здатися на перший
+                    погляд. Він
+                    населений страшними і шкідливими істотами, які звикли завдавати оточуючим лише біль і страждання...
+                </p>
+            </li>
+            <li class="multserials-item">
+                <a class="multserials-img" href="https://uaserials.pro/8069-universytet-chyuparskogo.html"><img
+                        src="https://uaserials.pro/posters/8069.jpg" alt=""></a>
+                <h2 class="multserials-name">Університет Чупарського</h2>
+                <p class="multserials-text">Дія відбувається у вигаданому університеті ім. Чупарського (нереального
+                    винахідника) у неназваному місті України.
+                    Головні герої — студенти першокурсники «Технічного Університету Чупарського», або «ТУЧ». Серед
+                    викладачів університету
+                    працює незвичайний професор Мурштейко, геній та винахідник, що виконує безліч небезпечних та
+                    секретних
+                    науково-фантастичних розробок для уряду, через які герої постійно потрапляють у різні незвичні
+                    ситуації та пригоди.</p>
+            </li>
+            <li class="multserials-item">
+                <a class="multserials-img" href="https://uaserials.pro/1481-nindzyago-maystry-spinzhytsu-lego.html"><img
+                        src="https://uaserials.pro/posters/1481.jpg" alt=""></a>
+                <h2 class="multserials-name">Лего Ніндзяґо: Майстри спінжитсу</h2>
+                <p class="multserials-text">Дуже давно один мудрий боєць створив легендарну Золоту Зброю, що володіє
+                    неймовірною надприродною силою. Творець такого
+                    цінного і незвичайного артефакту Чотирьох Стихій незабаром пішов у світ інший, а на його творіння
+                    всі почали полювати.
+                    Глядач познайомиться з маленькими і чарівними чоловічками, які вважають себе справжніми ніндзя. Вони
+                    проповідують давню
+                    філософію, згідно з якої справжня сила і могутність полягають не в наявності м'язів, а в проясненому
+                    розумі. Зейн, Коул,
+                    Джей і Кай — відважні і хоробрі воїни, які довгий час навчалися бойовим мистецтвам у свого
+                    наставника. Тепер перед ними
+                    стоїть дуже важливе і складне завдання, яке пов'язане з порятунком країни, а також пошуком тієї
+                    самої Золотої Зброї. Їх
+                    мирну територію намагаються захопити могутні вороги, тому головним героям так чи інакше доведеться
+                    вступити з ними в
+                    запеклий бій...</p>
+            </li>
+            <li class="multserials-item">
+                <a class="multserials-img" href="https://uaserials.pro/6120-prygody-kapheda.html"><img
+                        src="https://uaserials.pro/posters/6120.jpg" alt=""></a>
+                <h2 class="multserials-name">Пригоди Капхеда!</h2>
+                <p class="multserials-text">Події розгортаються у динамічному всесвіті відеоігри «Cuphead», натхненному
+                    анімаційними фільмами 1930-х років. У центрі
+                    сюжету знаходяться імпульсивний і легковажний Капхед і його більш стриманий брат Маґмен, які,
+                    воліючи вибирати легший і
+                    веселіший шлях, регулярно опиняються в непередбачуваних пригодах. Нещодавно Капхед заборгував
+                    дияволові свою душу, через
+                    що тепер змушений завжди бути напоготові. В той самий час він майже не переживає з цього приводу,
+                    чим наражає себе і
+                    свого брата на смертельну небезпеку.</p>
+            </li>
+        </ul>
         <ul>
             <li>
-                <a href="https://uaserials.pro/1030-rozcharuvannya.html"><img src="https://uaserials.pro/posters/1030.jpg" alt="Розчарування"></a>
-                <h2>Розчарування</h2>
-                <p>Мультсеріал для дорослої аудиторії, від творця «Сімпсонів» та «Футурами» Метта Грейнінга.
-                
-                Дії серіалу розгорнуться в середньовічному королівстві Дрімландія і розкажуть про принцесу-алкоголічку Бін, її нервового
-                ельфа Елфо і «особистого демона» Люці. На своєму життєвому шляху це тріо зустріне огрів, фей, гарпій, бісів, тролів і
-                безліч не самих розумних людей.</p>
-            </li>
+                <a href=""><img src="" alt=""></a></li>
             <li>
-                <a href=""><img src="https://uaserials.pro/posters/408.jpg" alt="Таємниці Гравіті Фолз"></a>
-                <h2>Таємниці Гравіті Фолз</h2>
-                <p>На літні канікули, підлітки-близнюки Діппер і Мейбл, відправляються в гості до далекого родича — дядечка Стена, в
-                провінційну глибинку Гравіті Фолз. Стен — досить дивний персонаж. Він вкрай хитрий і меркантильний, завжди намагається
-                отримати якомога більше грошей. Непогані бариші дядечкові приносить Хижка Чудес — туристичний центр. Підлітки відверто
-                нудяться в Гравіті Фолз, поки не виявляють, що в містечку відбуваються надприродні події. Все починається з того, що
-                Дріппер знаходить дивний щоденник, в якому описуються дивовижні таємниці Гравіті Фолз. Близнюки вирішують об'єднати
-                сили, щоб розгадати всі загадки містечка.</p>
+                <a href=""><img src="" alt=""></a></li>
+            <li>
+                <a href=""><img src="" alt=""></a></li>
+            <li>
+                <a href=""><img src="" alt=""></a>
             </li>
             <li>
                 <a href=""><img src="" alt=""></a>
-                <h2></h2>
-                <p></p>
             </li>
             <li>
                 <a href=""><img src="" alt=""></a>
-                <h2></h2>
-                <p></p>
             </li>
             <li>
                 <a href=""><img src="" alt=""></a>
-                <h2></h2>
-                <p></p>
             </li>
             <li>
                 <a href=""><img src="" alt=""></a>
-                <h2></h2>
-                <p></p>
+            </li>
+            <li>
+                <a href=""><img src="" alt=""></a>
+            </li>
+            <li>
+                <a href=""><img src="" alt=""></a>
             </li>
         </ul>
     </main>
