--- a/pages/newpage.html
+++ b/pages/newpage.html
@@ -1,11 +1,266 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
-    
+    <header>
+        <a class="header-logo" href="../index.html"> <img class="logo-img" src="../img/us.jpg" alt="uss">Our first
+            progect</a>
+        <nav class="header-nav">
+            <ul class="nav-list">
+                <li class="nav-item"><a class="nav-link" target="_blank"
+                        href="https://web.telegram.org/k/#@HotmanInFedora">
+                        snow/author1</a></li>
+                <li class="nav-item"><a class="nav-link" target="_blank"
+                        href="https://web.telegram.org/a/#1615260733">author2</a></li>
+                <li class="nav-item"><a class="nav-link" href="../index.html"> serials/multserials</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main2">
+        <section class="Films">
+            <ul class="films-list">
+                <li class="films-item">
+                    <a class="films-img" href="https://uaserials.pro/8301-govory-do-mene.html"><img
+                            src="https://uaserials.pro/posters/8301.jpg" alt=""></a>
+                    <h2 class="films-name">Говори до мене</h2>
+                    <p class="films-text">Міа намагається пережити втрату своєї рідної матері Реї, яка померла
+                        загадковим чином. Разом із Джейд та Деніелом вона
+                        відвідує вечірку, куди хулігани Гейлі та Джосс приносять забальзамовану руку та стверджують, що
+                        вона є відрубаною
+                        кінцівкою медіума. Контакт з рукою відкриває доступ у потойбічний світ, і Міа добровільно
+                        вирішує спробувати щастя,
+                        сподіваючись отримати шанс на контакт із рідною матір'ю. З'ясувавши, що Рея перебуває в
+                        ув'язненні в потойбіччі, юна
+                        дівчина починає проводити експерименти з відрубаною кінцівкою, стикаючись з невідомими силами,
+                        які несуть загрозу її
+                        здоровому глузду та безпеці оточуючих.</p>
+                </li>
+                <li class="films-item">
+                    <a class="films-img" href="https://uaserials.pro/5706-ne-dyvitsya-vgoru.html"><img
+                            src="https://uaserials.pro/posters/5706.jpg" alt="Не дивіться вгору"></a>
+                    <h2 class="films-name">Не дивіться вгору</h2>
+                    <p class="films-text">Викладач Рендалл Мінді разом із молодою аспіранткою астрономії Кейт Дібіаскі
+                        із жахом виявляє, що до Землі рухається
+                        велика комета, яка при зіткненні знищить усе людство. Вони поспішають до Білого дому на прийом
+                        до президента США, але
+                        їхні слова ніхто не сприймає всерйоз, ігноруючи назріваючу катастрофу. Вимушені самотужки
+                        привертати громадську увагу до
+                        проблеми, головні герої терміново вирушають у медіа-тур по всій країні, зіштовхуючись із
+                        зневажливим ставленням та
+                        недовірою...</p>
+                </li>
+                <li class="films-item">
+                    <a class="films-img" href="https://uaserials.pro/2058-matrycya.html"><img
+                            src="https://uaserials.pro/posters/2058.jpg" alt="Матриця"></a>
+                    <h2 class="films-name">Матриця</h2>
+                    <p class="films-text">Одного разу простий хакер Нео раптом дізнається, що весь світ навколо нього —
+                        ілюзія, матриця, якою управляють машини.
+                        Все це потрібно новим господарям життя, щоб просто качати з людства енергію. Але ще існує «Опір»
+                        — особистості, які
+                        живуть поза матриці і борються за те, щоб людський рід повернув собі своє горде ім'я, а люди
+                        перестали бути просто
+                        батарейками. І Нео — «Обраний», той самий, хто здатен повернути людству свободу.</p>
+                </li>
+                <li class="films-item">
+                    <a class="films-img" href="https://uaserials.pro/2279-probudzhennya.html"><img
+                            src="https://uaserials.pro/posters/2279.jpg" alt="Пробудження"></a>
+                    <h2 class="films-name">Пробудження</h2>
+                    <p class="films-text">Космічний лайнер «Авалон» вирушає в подорож тривалістю 120 років. Мета
+                        тривалого перельоту — організувати колонію на
+                        іншій планеті й освоїти життя на новому місці. На борту корабля п'ять тисяч пасажирів, яких
+                        перед польотом штучно
+                        вводять в гібернацію і поміщають в спеціальні капсули. Тільки таким чином людський організм може
+                        перенести політ
+                        тривалістю понад століття. По дорозі корабель потрапляє в метеоритний шторм. В результаті
+                        зіткнень з космічними
+                        частинками, лайнер почало сильно трясти, через що одна з капсул розкрилася, і пасажир
+                        прокинувся, а до кінця подорожі
+                        залишилося ще 90 років...</p>
+                </li>
+                <li class="films-item">
+                    <a class="films-img" href="https://uaserials.pro/2264-volodar-persniv-hranyteli-persnya.html"><img
+                            src="https://uaserials.pro/posters/2264.jpg" alt="Володар перснів: Хранителі персня"></a>
+                    <h2 class="films-name">Володар перснів: Хранителі персня</h2>
+                    <p class="films-text">Це початок захоплюючого оповідання про фентезійні народи, долею яких володіє
+                        особливе, наділене магією кільце. Цей
+                        артефакт потрапляє в руки маленького слабкого гоббіта. Тепер від внутрішньої сили Фродо
+                        залежить, послужить кільце добру
+                        або силам темряви. На допомогу юному гоббіта зберуться маги, люди і ельфи. Їм доведеться
+                        захищати власника такого
+                        цінного скарбу навіть ціною власного життя.</p>
+                </li>
+                <li class="films-item">
+                    <a class="films-img" href="https://uaserials.pro/2069-shou-trumena.html"><img
+                            src="https://uaserials.pro/posters/2069.jpg" alt="Шоу Трумена"></a>
+                    <h2 class="films-name">Шоу Трумена</h2>
+                    <p class="films-text">Трумен Бербанк живе в невеликому американському містечку, їздить на роботу,
+                        відпочиває з друзями, дивиться новини і не
+                        помічає нічого підозрілого. А варто було б. Справа в тому, що всі свої тридцять років
+                        добропорядний громадянин перебуває
+                        під прицілом прихованих телекамер, які транслюють його життя «в прямому ефірі 24 години на добу,
+                        7 днів на тиждень для
+                        телеглядачів всієї Землі». Його світ — величезний павільйон, населений акторами. Він сам — лише
+                        маріонетка в руках
+                        Творця-телемагната. Але одного разу герой самого рейтингового в світі реаліті почне підозрювати
+                        неладне...</p>
+                </li>
+                <li class="films-item">
+                    <a class="films-img" href="https://uaserials.pro/1835-parazyty-2019.html"><img
+                            src="https://uaserials.pro/posters/1835.jpg" alt="Паразити"></a>
+                    <h2 class="films-name">Паразити</h2>
+                    <p class="films-text">Події цікавого сюжетного оповідання розгортаються навколо членів заповзятливої
+                        сім'ї Кім. Вони живуть в підвальному
+                        приміщенні та постійно сваряться через важке фінансове становище. До недавнього часу Гі-Тхек
+                        перебував на службі, і його
+                        заробітна плата була єдиним стабільним джерелом доходу для сім'ї, але тепер, після несподіваного
+                        звільнення, вони
+                        втратили й цей дохід. Напруга щодня наростає. Попри ці неприємності, у Кі Ву є друг, який
+                        просить його про допомогу.
+                        Діло в тому, що потрібен репетитор для дочки багатого бізнесмена. Кі Ву ідеально підходить для
+                        цієї роботи.
+                        Влаштувавшись на цю роботу, шляхом різноманітних махінацій, головний герой перетягує сюди всю
+                        сім'ю. Тепер кожен має
+                        якусь посаду...</p>
+                </li>
+                <li class="films-item">
+                    <a class="films-img" href="https://uaserials.pro/1971-fantastychni-zviri-i-de-yih-shukaty.html"><img
+                            src="https://uaserials.pro/posters/1971.jpg" alt="Фантастичні звірі і де їх шукати"></a>
+                    <h2 class="films-name">Фантастичні звірі і де їх шукати</h2>
+                    <p class="films-text">Ньют Саламандер в далекому 1926 році відправляється у своїх справах в
+                        Нью-Йорк, з валізою, наповненою магічними
+                        тваринами. В один прекрасний момент вони втікають. Так невдалий зоолог накликає на себе гнів
+                        Магічного Конгресу
+                        Північної Америки. Провина Саламандера загрожує мирному балансу товариства. А є ще і
+                        терористична організація, яка
+                        оголосила полювання на чарівників. Саламандер стає об'єктом загального переслідування...</p>
+                </li>
+                <li class="films-item">
+                    <a class="films-img" href="https://uaserials.pro/1883-krolyk-dzhodzho.html"><img
+                            src="https://uaserials.pro/posters/1883.jpg" alt="Кролик Джоджо"></a>
+                    <h2 class="films-name">Кролик Джоджо</h2>
+                    <p class="films-text">Юний і наївний Джоджо живе разом зі своєю артистичною мамою в нацистській
+                        Німеччині і дуже радий вступу в Гітлер'югенд.
+                        Його кращий друг і порадник — уявний фюрер, його батько воює десь в Італії, а сам Джоджо жадає
+                        відправитися на війну або
+                        хоча б зловити парочку євреїв. Але одного разу в його житті з'являється новий і цілком реальний
+                        друг, який змушує
+                        хлопчика змінити свої погляди на життя...</p>
+                </li>
+                <li class="films-item">
+                    <a class="films-img" href="https://uaserials.pro/1731-soncestoyannya.html"><img
+                            src="https://uaserials.pro/posters/1731.jpg" alt="Сонцестояння"></a>
+                    <h2 class="films-name">Сонцестояння</h2>
+                    <p class="films-text">Фолк-хоррор розповідає про шалений язичницький культ, з яким доведеться
+                        зіткнутися студентам, які приїхали в маленьке
+                        шведське село напередодні літнього сонцестояння. Дені — осиротіла нещасна дівчина. Друзі давно
+                        вмовляють її хлопця
+                        Крістіана розлучитися з коханою. На літніх канікулах молоді люди збираються відправитися у
+                        шведську глибинку. Дені
+                        напрошується з ними. Гостям належить взяти участь у великому костюмованому святкуванні,
+                        присвяченому літньому
+                        сонцестоянню. Правда ніхто не спромігся попередити, які ролі їм наперед визначено. Головним
+                        героям доведеться зіткнутися
+                        з чимось невідомим, де потрібно буде боротись за своє життя...</p>
+                </li>
+            </ul>
+        </section>
+        <section class="cartoons">
+            <ul class="cartoons-list">
+                <li class="cartoons1">
+                    <a class="cartoons-img1" href=""><img src="" alt=""></a>
+                    <h2 class="cartoons-name1"></h2>
+                    <p class="cartoons-text1"></p>
+                </li>
+                <li class="cartoons2">
+                    <a class="cartoons-img2" href=""><img src="" alt=""></a>
+                    <h2 class="cartoons-name2"></h2>
+                    <p class="cartoons-text2"></p>
+                </li>
+                <li class="cartoons3">
+                    <a class="cartoons-img3" href=""><img src="" alt=""></a>
+                    <h2 class="cartoons-name3"></h2>
+                    <p class="cartoons-text3"></p>
+                </li>
+                <li class="cartoons4">
+                    <a class="cartoons-img4" href=""><img src="" alt=""></a>
+                    <h2 class="cartoons-name4"></h2>
+                    <p class="cartoons-text4"></p>
+                </li>
+                <li class="cartoons5">
+                    <a class="cartoons-img5" href=""><img src="" alt=""></a>
+                    <h2 class="cartoons-name5"></h2>
+                    <p class="cartoons-text5"></p>
+                </li>
+                <li class="cartoons6">
+                    <a class="cartoons-img6" href=""><img src="" alt=""></a>
+                    <h2 class="cartoons-name6"></h2>
+                    <p class="cartoons-text6"></p>
+                </li>
+                <li class="cartoons7">
+                    <a class="cartoons-img7" href=""><img src="" alt=""></a>
+                    <h2 class="cartoons-name7"></h2>
+                    <p class="cartoons-text7"></p>
+                </li>
+                <li class="cartoons8">
+                    <a class="cartoons-img8" href=""><img src="" alt=""></a>
+                    <h2 class="cartoons-name8"></h2>
+                    <p class="cartoons-text8"></p>
+                </li>
+                <li class="cartoons9">
+                    <a class="cartoons-img9" href=""><img src="" alt=""></a>
+                    <h2 class="cartoons-name9"></h2>
+                    <p class="cartoons-text9"></p>
+                </li>
+                <li class="cartoons10">
+                    <a class="cartoons-img10" href=""><img src="" alt=""></a>
+                    <h2 class="cartoons-name10"></h2>
+                    <p class="cartoons-text10"></p>
+                </li>
+                <li class="cartoons11">
+                    <a class="cartoons-img11" href=""><img src="" alt=""></a>
+                    <h2 class="cartoons-name11"></h2>
+                    <p class="cartoons-text11"></p>
+                </li>
+                <li class="cartoons12">
+                    <a class="cartoons-img12" href=""><img src="" alt=""></a>
+                    <h2 class="cartoons-name12"></h2>
+                    <p class="cartoons-text12"></p>
+                </li>
+                <li class="cartoons13">
+                    <a class="cartoons-img13" href=""><img src="" alt=""></a>
+                    <h2 class="cartoons-name13"></h2>
+                    <p class="cartoons-text13"></p>
+                </li>
+                <li class="cartoons14">
+                    <a class="cartoons-img14" href=""><img src="" alt=""></a>
+                    <h2 class="cartoons-name14"></h2>
+                    <p class="cartoons-text14"></p>
+                </li>
+                <li class="cartoons15">
+                    <a class="cartoons-img15" href=""><img src="" alt=""></a>
+                    <h2 class="cartoons-name15"></h2>
+                    <p class="cartoons-text15"></p>
+                </li>
+                <li class="cartoons16">
+                    <a class="cartoons-img16" href=""><img src="" alt=""></a>
+                    <h2 class="cartoons-name16"></h2>
+                    <p class="cartoons-text16"></p>
+                </li>
+            </ul>
+        </section>
+    </main>
 </body>
+
 </html>
